--- a/main.css
+++ b/main.css
@@ -61,6 +61,14 @@
   background-color: #c1c1c1;
   transition: all 0.2s ease-in-out;
 }
+.win {
+  background-color: #054e14;
+  color: #cfcb00 !important;
+}
+.black {
+  color: black !important;
+  font-weight: 900 !important;
+}
 .player-titr_0,
 .player-titr_1 {
   text-align: center;
@@ -75,6 +83,7 @@
   text-align: center;
   font-size: 75px;
   margin: 25px 0;
+  font-weight: 100;
 }
 .currentContainer {
   position: absolute;
@@ -110,4 +119,42 @@
 }
 .hidden {
   display: none;
+}
+.glory {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(3px);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.modal {
+  border-radius: 10px;
+  background-color: #666;
+  box-shadow: 0px 0px 30px black;
+  z-index: 101;
+  padding: 30px 70px;
+}
+.newGameLink {
+  margin: 50px auto 10px auto;
+  padding: 10px 25px;
+  font-size: 20px;
+  opacity: 0.8;
+  width: 95px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  color: white;
+  box-shadow: 0px 0px 10px black;
+  border-radius: 5px;
+  background-color: darkslategray;
+}
+.newGameLink:hover {
+  opacity: 1;
+  cursor: pointer;
+  box-shadow: 0px 2px 10px black;
+  transform: scale(1.01);
 }
